# ReflS-Static

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/ReflS/: Attribute.hpp  List.hpp  ReflS.hpp  TypeInfo.hpp  Utils.hpp
include/ReflS/Core/: Base.hpp  Constructor.hpp  Field.hpp  Function.hpp  Macros.hpp  Member.hpp  Str.hpp  Traits.hpp
include/ReflS/Impl/: List.inl
test/: 000-TestCases.cpp  010-Str.hpp  020-List.hpp  030-Member.hpp  040-TypeInfo.hpp  050-Attribute.hpp  060-Inheritance.hpp  070-Constructor.hpp  CMakeLists.txt
